message_body: Fix -3px alignment kludge using whitespace control.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1297,7 +1297,6 @@ td.pointer {
     font-weight: 700;
     vertical-align: top;
     line-height: 12px;
-    margin-left: -3px;
 }
 
 .sender_name-in-status {
